--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,26 @@
   }
 }
 
+.image-client {
+  padding: 2px;
+  border: 1px solid blue;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -50px;
+  border-radius: 3px;
+}
+
+.image-client .inner-housing {
+  width: 90px;
+  height: 90px;
+  overflow: hidden;
+  border-radius: 3px;
+}
+
+.image-client .inner-housing img {
+  width: 200%;
+}
+
 /*!
  * Bootstrap v5.0.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
