--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -15,3 +15,16 @@
         }
     }
 }
+
+#visit-showrooms{
+    height: 100vh;
+    background-image: url(../assets/anna-sullivan-f7fZg21B3ms-unsplash.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+}
+
+#newsletter{
+    height: 100vh;
+}
