--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,3 +1,39 @@
+@media screen and (min-width: 1280px){
+    .carousel-inner{
+        height: 660px;
+    }
+    .wrapper-image{
+        height: 800px;
+        overflow: hidden;
+        img{
+            margin-top: -300px;
+        }
+    }
+}
+body{
+    background-color: #032539!important;
+}
+// header
+header{
+    background-color: #fff;
+}
+#ul-nav{
+    width: 80%;
+}
+// sections
+section{
+    min-height: 100vh;
+    background-color: #fff;
+    margin: 0;
+}
+.card{
+    margin-bottom: 5rem;
+}
+@media only screen and (min-width: 768px){
+    .card{
+        margin-bottom: 0;
+    }
+}
 .image-client{
     padding: 2px;
     border: 1px solid blue;
@@ -27,4 +63,8 @@
 
 #newsletter{
     height: 100vh;
+}
+
+footer{
+    color: #fff;
 }
