--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,16 @@
-@import "./custom.scss";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "./variables.scss";
+@import "./custom.scss";
 // components
 .btn{
-    background-color: #032539;
+    background-color: $nauticBlue;
     border-radius: 4px;
-    width: 100%;
     border: none;
+    font-size: $d25;
+    padding: 1rem 3rem;
+}
+
+.btn-light{
+    background-color: $goldenCarpet;
+    color: #fff;
 }
