--- a/css/main.css
+++ b/css/main.css
@@ -11584,6 +11584,30 @@ section {
   color: #032539 !important;
 }
 
+input[type=email] {
+  border: none;
+  background-color: none;
+  border-bottom: 1px solid #CCB29E;
+  color: #CCB29E;
+  font-size: 1.5625rem;
+}
+
+input[type=email]::-webkit-input-placeholder {
+  color: #CCB29E;
+}
+
+input[type=email]:-ms-input-placeholder {
+  color: #CCB29E;
+}
+
+input[type=email]::-ms-input-placeholder {
+  color: #CCB29E;
+}
+
+input[type=email]::placeholder {
+  color: #CCB29E;
+}
+
 footer {
   color: #fff;
 }
@@ -11593,7 +11617,7 @@ footer {
   border-radius: 4px;
   border: none;
   font-size: 1.5625rem;
-  padding: 1rem 3rem;
+  padding: 1rem 1.5rem;
 }
 
 .btn-light {
