--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,12 +1,15 @@
 // colors
 $nauticBlue: #032539;
 $goldenCarpet: #CCB29E;
+$ecstasy: #FCCC8D;
 
 // type dimensions
 $d12: 0.75rem;
 $d15: 0.9375rem;
 $d25: 1.5625rem;
 $d30: 1.875rem;
+$d35: 2.1875rem;
+$d50: 3.125rem;
 $d60: 3.75rem;
 $d70: 4.375rem;
 $d75: 4.6875rem;
