--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,15 +1,3 @@
-@media screen and (min-width: 1280px){
-    .carousel-inner{
-        height: 660px;
-    }
-    .wrapper-image{
-        height: 800px;
-        overflow: hidden;
-        img{
-            margin-top: -300px;
-        }
-    }
-}
 // general
 body{
     background-color: $nauticBlue!important;
@@ -18,7 +6,7 @@ body{
 }
 .title{
     font-family: 'mermaidbold'!important;
-    font-size: 4.375rem;
+    font-size: $d50;
 }
 .title-slide{
     font-size: $d60;
@@ -31,13 +19,22 @@ nav .active{
     font-weight: $medium;
 }
 p{
-    font-size: $d25;
+    font-size: $d15;
     line-height: 2;
 }
 
 // header
 header{
     background-color: #fff;
+    .navbar-brand{
+        background-image: url(../assets/wbsLogoMobile.png);
+        background-size: 100%;
+        background-repeat: no-repeat;
+        width: 50px;
+        height: 50px;
+        display: block;
+        text-indent: -9999px;
+    }
 }
 #ul-nav{
     width: 80%;
@@ -51,11 +48,7 @@ section{
 .card{
     margin-bottom: 5rem;
 }
-@media only screen and (min-width: 768px){
-    .card{
-        margin-bottom: 0;
-    }
-}
+
 .image-client{
     padding: 2px;
     border: 1px solid $nauticBlue;
@@ -91,19 +84,37 @@ section{
     height: 0px;
     overflow: hidden;
 }
-@media only screen and (min-width:1024px){
-    #filterBtn{
-        color: $nauticBlue!important;
+
+.product-container{
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fill, 18rem);
+    grid-auto-rows: minmax(20px, auto);
+    justify-content: center;
+}
+.product-container > * {
+    float: left;
+}
+
+.card-client{
+    .card-subtitle{
+        font-size: $d12;
     }
-    #dropDownFilter{
-        overflow: visible;
-        height: 100%;
+    .card-body .card-text{
+        font-size: $d12;
     }
 }
 
 .product-card{
-    background-color: $goldenCarpet!important;
+    background-color: $ecstasy!important;
     color: $nauticBlue!important;
+    h5{
+        font-weight: $light;
+        font-size: $d35!important;
+    }
+    p{
+        font-size: $d15;
+    }
 }
 
 // form
@@ -118,6 +129,61 @@ input[type=email]{
     }
 }
 
+.social-box a svg{
+    fill: $nauticBlue;
+}
+
 footer{
     color: #fff;
+}
+
+@media only screen and (min-width: 768px){
+    header{
+        .navbar-brand{
+            background-image: url(../assets/wbsLogoDesktop.png);
+            width: 260px;
+            height: 40px;
+        }
+    }
+    p{
+        font-size: $d25;
+        line-height: 2;
+    }
+    .card{
+        margin-bottom: 0;
+    }
+    #dropDownFilter{
+        button{
+            font-size: $d15;
+        }
+    }
+    .title{
+        font-size: $d60;
+    }
+}
+
+@media only screen and (min-width:1024px){
+    #filterBtn{
+        color: $nauticBlue!important;
+    }
+    #dropDownFilter{
+        overflow: visible;
+        height: 100%;
+    }
+}
+
+@media screen and (min-width: 1280px){
+    .carousel-inner{
+        height: 660px;
+    }
+    .wrapper-image{
+        height: 800px;
+        overflow: hidden;
+        img{
+            margin-top: -300px;
+        }
+    }
+    .title{
+        font-size: $d70;
+    }
 }
