--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,8 @@
     border-radius: 4px;
     border: none;
     font-size: $d25;
-    padding: 1rem 1.5rem;
+    padding: 0.5rem 1.5rem;
+    font-weight: $light;
 }
 
 .btn-light{
